<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Kompetensi">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="KOMPETENSI"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:layout_marginLeft="@dimen/padding16"/>

            <Button
                android:id="@+id/close"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="@dimen/padding16"
                android:layout_alignParentRight="true"
                android:background="@drawable/close"/>

        </RelativeLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/transparanWhite">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/jenjang"
                            android:textColor="@color/colorBlack"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kelas"
                            android:textColor="@color/colorBlack"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kurikukum"
                            android:textColor="@color/colorBlack"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/k13" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:background="@color/transparanPink"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Kompetensi Dasar"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/padding4"
                android:background="#66FFFF"
                android:gravity="center|fill_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/KD"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding4"
                    android:text="@string/KD1"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding4"
                    android:text="@string/KD2"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding4"
                    android:text="@string/KD3"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding4"
                    android:text="@string/KD4"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>